--- a/HerokuApp/HerokuApp/HerokuApp.csproj
+++ b/HerokuApp/HerokuApp/HerokuApp.csproj
@@ -20,4 +20,10 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="114.0.5735.9000" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="HerokuAppTests\TestData\HomeWork.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
